--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -15,7 +15,7 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-  #  location /api {
-  #      proxy_pass http://webapi;
-  #  }
+   location /api {
+       proxy_pass http://webapi;
+   }
 }
